--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,13 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: 'Pull Request auto-assign'
+description: 'Automatically add Assignees to a PR'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  repo-token:
+    description: 'Github token for the repository'
+    default: ${{ github.token }}
+    required: false
+  assignee:
+    description: 'Username of the assignee'
     required: true
-    default: 'World'
 outputs:
   time: # id of output
     description: 'The time we greeted you'
