cleaning up dependencies and improving README.md

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     name: Pull Request auto-assignment
     steps:
-      - name: Pull Request auto-assignment
-        id: perform-assignment
-        uses: marcel-ribeiro/pull-request-auto-assign-action@1.0.2-SNAPSHOT
+      - uses: marcel-ribeiro/pull-request-auto-assign-action@1.0.2-SNAPSHOT
         with:
           assignee: 'marcel-ribeiro'
