--- a/action.yml
+++ b/action.yml
@@ -6,11 +6,8 @@ inputs:
     default: ${{ github.token }}
     required: false
   assignee:
-    description: 'Username of the assignee'
+    description: 'Github username the PR should be assigned to'
     required: true
-outputs:
-  time: # id of output
-    description: 'The time we greeted you'
 runs:
   using: 'node12'
   main: 'dist/index.js'
